Implement SQLRow and replace deprecated PluginPlayerEvent methods